--- a/resources/scss/pages/product/_product-intro.scss
+++ b/resources/scss/pages/product/_product-intro.scss
@@ -119,6 +119,7 @@ label.product-option--color {
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 9;
 
     @include mediaAbove(lg) {
         right: unset;
